test/fail/match_case01.v3
//@parse
def m() {
	match (x) {
		case V: X();
		case V: X();
		case V: X();
		case V: X();
		case V: X();
	}
}